[tool.poetry]
name = "oemof-B3"
version = "0.0.3dev"
description = "oemof-B3 - an open-source energy system model for Brandenburg/Berlin"
authors = [
  "Jann Launer <jann.launer@rl-institut.de>",
  "Sabine Haas <sabine.haas@rl-institut.de>",
  "Marie-Claire Gering <marie-claire.gering@rl-institut.de>",
  "Julius Meier <julius.meier@rl-institut.de>",
  "Caroline Möller <Caroline.Moeller@rl-institut.de>",
  "Monika Orlowski <monika.orlowski@rl-institut.de>",
  "Kilian Helfenbein <kilian.helfenbein@rl-institut.de>",
  "Maja Zimmermann <maja.zimmermann@rl-institut.de>",
  "Hendrik Huyskens <hendrik.huyskens@rl-institut.de>",
]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
numpy = ">=1.21.0"
rtree = ">=0.9.7"
pyyaml = ">=6.0"
dynaconf = "^3.1.7"
snakemake = ">=5"
oemoflex = { git = "https://git@github.com/rl-institut/oemoflex", tag = "0.0.1"}
Sphinx = {version = "^4.3.2", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}
sphinxcontrib-bibtex = {version = "^2.4.1", optional = true}
docutils = "^0.17"
geopandas = {version = "^0.10.2", optional = true}
demandlib = "^0.1.8"
pandas = ">=1.1.0"

[tool.poetry.dev-dependencies]
black = "20.8b1"
pytest = "^7.0.1"
coverage = "^6.3.2"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-bibtex"]
preprocessing = ["geopandas"]
upload_results_to_oep = ["oem2orm"]

[tool.black]
exclude = '''
/(
    \
  |
    \.eggs
  | \.git
  | \.mypy_cache
  | meta/migrations
  | docs
  | .venv
)/
'''
max-line-length=100
